; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_dec_sub.c_sub_set_play_dir.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_dec_sub.c_sub_set_play_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dec_sub = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sub_set_play_dir(%struct.dec_sub* %0, i32 %1) #0 {
  %3 = alloca %struct.dec_sub*, align 8
  %4 = alloca i32, align 4
  store %struct.dec_sub* %0, %struct.dec_sub** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %6 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %5, i32 0, i32 1
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %10 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %12 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %11, i32 0, i32 1
  %13 = call i32 @pthread_mutex_unlock(i32* %12)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
